Fixed build. Translated to english. Ready to refactor.